[package]
name = "transaction-core"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Contributors"]
description = "Shared no_std transaction circuit core logic."

[dependencies]
blake3 = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-matrix = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-poseidon2 = { workspace = true }
p3-symmetric = { workspace = true }
p3-uni-stark = { workspace = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
p3-uni-stark = { workspace = true }

[features]
default = ["std"]
std = ["blake3/std", "serde?/std"]
serde = ["dep:serde"]
plonky3-e2e = []

[lints]
workspace = true
