[package]
name = "transaction-core"
version = "0.1.0"
edition = "2021"
authors = ["Hegemon Contributors"]
description = "Shared no_std transaction circuit core logic."

[dependencies]
blake3 = { version = "1", default-features = false }
hegemon-field = { workspace = true }
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }
protocol-versioning = { path = "../../protocol/versioning", default-features = false }

[features]
default = ["std"]
std = ["blake3/std", "serde?/std"]
serde = ["dep:serde"]
stark-fast = []

[lints]
workspace = true
