[package]
name = "transaction-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synthetic-crypto = { path = "../../crypto" }
hex = "0.4"
protocol-versioning = { path = "../../protocol/versioning" }
transaction-core = { path = "../transaction-core", features = ["serde"] }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-matrix = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-dft = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-uni-stark = { workspace = true }
p3-symmetric = { workspace = true }
p3-poseidon2 = { workspace = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1"

[features]
default = ["plonky3"]
plonky3 = []
plonky3-e2e = ["plonky3", "transaction-core/plonky3-e2e"]

[lints]
workspace = true
