[package]
name = "transaction-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synthetic-crypto = { path = "../../crypto" }
hex = "0.4"
bincode = "1.3"
blake3 = "1.8"
getrandom = "0.3"
rayon = "1"
protocol-versioning = { path = "../../protocol/versioning" }
transaction-core = { path = "../transaction-core", features = ["serde"] }
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-goldilocks = { workspace = true }
p3-matrix = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-fri = { workspace = true }
p3-dft = { workspace = true, features = ["parallel"] }
p3-merkle-tree = { workspace = true }
p3-uni-stark = { workspace = true, features = ["parallel"] }
p3-symmetric = { workspace = true }
p3-poseidon2 = { workspace = true }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1"

[features]
default = ["plonky3"]
plonky3 = []
plonky3-e2e = ["plonky3", "transaction-core/plonky3-e2e"]
stark-fast = ["transaction-core/stark-fast"]

[lints]
workspace = true
