[package]
name = "transaction-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
synthetic-crypto = { path = "../../crypto" }
hex = "0.4"
bincode = "1.3"
blake3 = "1.8"
getrandom = "0.3"
hegemon-field = { workspace = true }
num-bigint = "0.4"
rayon = "1"
protocol-versioning = { path = "../../protocol/versioning" }
transaction-core = { path = "../transaction-core", features = ["serde"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }

[dev-dependencies]
proptest = "1"

[features]
default = []
formal-generator = []
slow-smallwood-e2e = []
stark-fast = ["transaction-core/stark-fast"]

[[bin]]
name = "gen_smallwood_production_constraint_lean"
path = "src/bin/gen_smallwood_production_constraint_lean.rs"
required-features = ["formal-generator"]

[lints]
workspace = true
